--- a/get-running-8-tev-code-cpp.ipynb
+++ b/get-running-8-tev-code-cpp.ipynb
@@ -1,25 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get Running the 8 TeV Example in C++\n",
+    "\n",
+    "\n",
+    "You can follow the steps to run 8 TeV example and see the results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Preparation\n",
+    "\n",
+    "- Import necessary modules that provides a way of using operating system dependent functionality. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#include <stdio.h>\n",
-    "#include <iostream> \n",
-    "#include <unistd.h>\n",
-    "#include <cstdlib>\n",
-    "#include <windows.h>\n",
-    "#include <shellapi.h>\n",
-    "#include <gSystem.h>"
+    "#include <stdlib.h>\n",
+    "#include <cstdio>\n",
+    "#include <iostream>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -27,16 +43,24 @@
     {
      "data": {
       "text/plain": [
-       "['Mit Jul 10 22:48:55 CEST 2019']"
+       "['Don Jul 11 15:41:55 CEST 2019']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "// print current system time\n",
     "system(date);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Create a new folder \"cpp-8tev\" in which you place your data and code"
    ]
   },
   {
@@ -58,6 +82,7 @@
     }
    ],
    "source": [
+    "// create a directory\n",
     "system(mkdir cpp-8tev);"
    ]
   },
@@ -87,6 +112,7 @@
     }
    ],
    "source": [
+    "// list the files in your directory\n",
     "system(ls -lhrt);"
    ]
   },
@@ -109,7 +135,19 @@
     }
    ],
    "source": [
+    "//print your current path\n",
     "system(pwd);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "- Prepare the code "
    ]
   },
   {
@@ -132,6 +170,7 @@
     }
    ],
    "source": [
+    "// change current directory to \"cpp-8tev\" \n",
     "system(cd cpp-8tev/);  // or chdir(\"cpp-8tev\")not work"
    ]
   },
@@ -154,6 +193,7 @@
     }
    ],
    "source": [
+    "// print your current path\n",
     "system(pwd);"
    ]
   },
@@ -176,6 +216,7 @@
     }
    ],
    "source": [
+    "// print current system time\n",
     "system(date);"
    ]
   },
@@ -198,7 +239,15 @@
     }
    ],
    "source": [
+    "// clone the code of 8TeV from github\n",
     "system(git clone https://github.com/atlas-outreach-data-tools/atlas-outreach-data-tools-framework.git);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Prepare the 8 TeV dataset"
    ]
   },
   {
@@ -218,6 +267,7 @@
     }
    ],
    "source": [
+    "// change current directory to \"Input\"\n",
     "chdir(\"atlas-outreach-data-tools-framework/Input/\"); //not work"
    ]
   },
@@ -240,6 +290,7 @@
     }
    ],
    "source": [
+    "// print your current path\n",
     "system(pwd);"
    ]
   },
@@ -262,6 +313,7 @@
     }
    ],
    "source": [
+    "// print current system time\n",
     "system(date);"
    ]
   },
@@ -1284,6 +1336,7 @@
     }
    ],
    "source": [
+    "// download data\n",
     "system(wget http://opendata.atlas.cern/release/samples/complete_set_of_ATLAS_open_data_samples_July_2016.zip);"
    ]
   },
@@ -1306,6 +1359,7 @@
     }
    ],
    "source": [
+    "// print current system time\n",
     "system(date);"
    ]
   },
@@ -1334,6 +1388,7 @@
     }
    ],
    "source": [
+    "// unzip the dataset you download\n",
     "system(unzip complete_set_of_ATLAS_open_data_samples_July_2016.zip);"
    ]
   },
@@ -1356,6 +1411,7 @@
     }
    ],
    "source": [
+    "// print current system time\n",
     "system(date);"
    ]
   },
@@ -1378,6 +1434,7 @@
     }
    ],
    "source": [
+    "// remove the zip file\n",
     "system(rm -rf complete_set_of_ATLAS_open_data_samples_July_2016.zip);"
    ]
   },
@@ -1400,6 +1457,7 @@
     }
    ],
    "source": [
+    "// print current system time\n",
     "system(date);"
    ]
   },
@@ -1423,6 +1481,7 @@
     }
    ],
    "source": [
+    "// change current path to parent directory\n",
     "system(cd ..); //chdir(\"..\")not work"
    ]
   },
@@ -1445,6 +1504,7 @@
     }
    ],
    "source": [
+    "// print your current path\n",
     "system(pwd);"
    ]
   },
@@ -1467,7 +1527,17 @@
     }
    ],
    "source": [
+    "// print current system time\n",
     "system(date);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Run the TTbarAnalysis\n",
+    "\n",
+    "- Run \"python RunScript.py\" with option \"-a TTbarAnalysis\""
    ]
   },
   {
@@ -1489,6 +1559,7 @@
     }
    ],
    "source": [
+    "// run analysis\n",
     "system(python RunScript.py -a TTbarAnalysis);"
    ]
   },
@@ -1511,7 +1582,17 @@
     }
    ],
    "source": [
+    "// print current system time\n",
     "system(date);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Plot Results\n",
+    "\n",
+    "- Run \"PlotResults.py\" and \"Configurations/PlotConf_TTbarAnalysis.py\" to plot the results."
    ]
   },
   {
@@ -1533,6 +1614,7 @@
     }
    ],
    "source": [
+    "//plot results\n",
     "system(python PlotResults.py Configurations/PlotConf_TTbarAnalysis.py);"
    ]
   },
@@ -1555,7 +1637,15 @@
     }
    ],
    "source": [
+    "// print current system time\n",
     "system(date);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- List all the plots in \"Output\" folder"
    ]
   },
   {
@@ -1577,6 +1667,7 @@
     }
    ],
    "source": [
+    "// list all files in \"Output\"\n",
     "system(ls -lhrt Output/);"
    ]
   },
@@ -1599,6 +1690,7 @@
     }
    ],
    "source": [
+    "// print your current path\n",
     "system(pwd);"
    ]
   },
