--- a/get-running-8-tev-code.ipynb
+++ b/get-running-8-tev-code.ipynb
@@ -1,10 +1,37 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get Running the 8 TeV Example in Python\n",
+    "\n",
+    "\n",
+    "\n",
+    "You can follow the steps to run 8 TeV example and see the results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
+   },
+   "source": [
+    "## 1. Preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Import OS module that provides a way of using operating system dependent functionality. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -13,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -22,19 +49,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Die Jul  9 20:32:28 CEST 2019\n",
+      "Don Jul 11 15:25:35 CEST 2019\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# print current system time\n",
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Create a new folder \"python-8tev\" in which you place your data and code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -45,20 +80,20 @@
        "0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "##\n",
+    "# create a directory\n",
     "command1 = 'mkdir python-8tev'\n",
     "os.system(command1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -67,26 +102,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 36K\n",
-      "drwxrwxr-x 3 summerstudent users 4.0K Okt 27  2016 Root\n",
-      "drwxr-xr-x 2 summerstudent users 4.0K Jul  2 17:53 Desktop\n",
-      "-rwxr-xr-x 1 summerstudent users  101 Jul  4 13:56 run-server-jupyter.sh\n",
-      "-rw-r--r-- 1 summerstudent users  557 Jul  9 17:02 get-framework.txt\n",
-      "drwxrwxr-x 4 summerstudent users 4.0K Jul  9 18:26 notebooks\n",
-      "-rw-r--r-- 1 summerstudent users 9.5K Jul  9 20:31 get-running-8-tev-code.ipynb\n",
-      "drwxr-xr-x 2 summerstudent users 4.0K Jul  9 20:32 python-8tev\n",
+      "total 8.0K\n",
+      "drwxr-xr-x 8 summerstudent users 4.0K Jul 11 15:20 atlas-outreach-data-tools-framework\n",
+      "drwxr-xr-x 2 summerstudent users 4.0K Jul 11 15:25 python-8tev\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# list the files in your directory\n",
     "myCmd = os.popen('ls -lhrt').read()\n",
     "print(myCmd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -95,31 +126,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/student\n",
+      "/home/student/demos-framework-software-notebooks/python-8tev/atlas-outreach-data-tools-framework/python-8tev/python-8tev\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# print your current path\n",
     "myCmd = os.popen('pwd').read()\n",
     "print(myCmd)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "##\n",
+    "- Prepare the code "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "[Errno 2] No such file or directory: 'python-8tev/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-54-6be7c216669f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m##\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# change current directory to \"python-8tev\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"python-8tev/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m: [Errno 2] No such file or directory: 'python-8tev/'"
+     ]
+    }
+   ],
+   "source": [
+    "# change current directory to \"python-8tev\" \n",
     "os.chdir(\"python-8tev/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -128,19 +179,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/student/python-8tev\n",
+      "/home/student/demos-framework-software-notebooks/python-8tev/atlas-outreach-data-tools-framework/python-8tev/python-8tev/python-8tev\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# print your current path\n",
     "myCmd = os.popen('pwd').read()\n",
     "print(myCmd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -149,19 +201,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Die Jul  9 20:32:29 CEST 2019\n",
+      "Don Jul 11 15:27:59 CEST 2019\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# print current system time\n",
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -172,27 +225,22 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "##\n",
+    "# clone the code of 8TeV from github\n",
     "command2 = 'git clone https://github.com/atlas-outreach-data-tools/atlas-outreach-data-tools-framework.git'\n",
     "os.system(command2)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "##\n",
-    "os.chdir(\"atlas-outreach-data-tools-framework/Input/\")"
+    "- Prepare the 8 TeV dataset"
    ]
   },
   {
@@ -201,19 +249,10 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/student/python-8tev/atlas-outreach-data-tools-framework/Input\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "myCmd = os.popen('pwd').read()\n",
-    "print(myCmd)"
+    "# change current directory to \"Input\"\n",
+    "os.chdir(\"atlas-outreach-data-tools-framework/Input/\")"
    ]
   },
   {
@@ -227,13 +266,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Die Jul  9 20:32:30 CEST 2019\n",
+      "/home/student/demos-framework-software-notebooks/python-8tev/atlas-outreach-data-tools-framework/Input\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "myCmd = os.popen('date').read()\n",
+    "# print your current path\n",
+    "myCmd = os.popen('pwd').read()\n",
     "print(myCmd)"
    ]
   },
@@ -245,20 +285,18 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Don Jul 11 14:28:34 CEST 2019\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "##\n",
-    "command3 = 'wget http://opendata.atlas.cern/release/samples/complete_set_of_ATLAS_open_data_samples_July_2016.zip'\n",
-    "os.system(command3)"
+    "# print current system time\n",
+    "myCmd = os.popen('date').read()\n",
+    "print(myCmd)"
    ]
   },
   {
@@ -269,17 +307,20 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Die Jul  9 20:37:02 CEST 2019\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "myCmd = os.popen('date').read()\n",
-    "print(myCmd)"
+    "# download data\n",
+    "command3 = 'wget http://opendata.atlas.cern/release/samples/complete_set_of_ATLAS_open_data_samples_July_2016.zip'\n",
+    "os.system(command3)"
    ]
   },
   {
@@ -290,20 +331,18 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "256"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Don Jul 11 14:32:44 CEST 2019\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "##\n",
-    "command4 = 'unzip complete_set_of_ATLAS_open_data_samples_July_2016.zip'\n",
-    "os.system(command4)"
+    "# print current system time\n",
+    "myCmd = os.popen('date').read()\n",
+    "print(myCmd)"
    ]
   },
   {
@@ -314,17 +353,20 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Die Jul  9 20:38:04 CEST 2019\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "12800"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "myCmd = os.popen('date').read()\n",
-    "print(myCmd)"
+    "# unzip the dataset you download\n",
+    "command4 = 'unzip complete_set_of_ATLAS_open_data_samples_July_2016.zip'\n",
+    "os.system(command4)"
    ]
   },
   {
@@ -335,20 +377,19 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The history saving thread hit an unexpected error (OperationalError('database or disk is full',)).History will not be written to the database.\n",
+      "Don Jul 11 14:32:46 CEST 2019\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "##\n",
-    "command5 = 'rm -rf complete_set_of_ATLAS_open_data_samples_July_2016.zip'\n",
-    "os.system(command5)"
+    "# print current system time\n",
+    "myCmd = os.popen('date').read()\n",
+    "print(myCmd)"
    ]
   },
   {
@@ -359,34 +400,25 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Die Jul  9 20:38:04 CEST 2019\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "myCmd = os.popen('date').read()\n",
-    "print(myCmd)"
+    "# remove the zip file\n",
+    "command5 = 'rm -rf complete_set_of_ATLAS_open_data_samples_July_2016.zip'\n",
+    "os.system(command5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "##\n",
-    "os.chdir(\"..\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -395,14 +427,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/student/python-8tev/atlas-outreach-data-tools-framework\n",
+      "Don Jul 11 14:32:47 CEST 2019\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "myCmd = os.popen('pwd').read()\n",
+    "# print current system time\n",
+    "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# change current path to parent directory\n",
+    "os.chdir(\"..\")"
    ]
   },
   {
@@ -416,13 +461,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Die Jul  9 20:38:05 CEST 2019\n",
+      "/home/student/demos-framework-software-notebooks/python-8tev/atlas-outreach-data-tools-framework\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "myCmd = os.popen('date').read()\n",
+    "# print your current path\n",
+    "myCmd = os.popen('pwd').read()\n",
     "print(myCmd)"
    ]
   },
@@ -434,20 +480,32 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Don Jul 11 14:32:47 CEST 2019\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "##\n",
-    "command6 = 'python RunScript.py -a TTbarAnalysis'\n",
-    "os.system(command6)"
+    "# print current system time\n",
+    "myCmd = os.popen('date').read()\n",
+    "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Run the TTbarAnalysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Run \"python RunScript.py\" with option \"-a TTbarAnalysis\""
    ]
   },
   {
@@ -458,17 +516,20 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Die Jul  9 21:01:21 CEST 2019\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "256"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "myCmd = os.popen('date').read()\n",
-    "print(myCmd)"
+    "# run analysis\n",
+    "command6 = 'python RunScript.py -a TTbarAnalysis'\n",
+    "os.system(command6)"
    ]
   },
   {
@@ -479,20 +540,32 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Don Jul 11 14:32:47 CEST 2019\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "##\n",
-    "command7 = 'python PlotResults.py Configurations/PlotConf_TTbarAnalysis.py' \n",
-    "os.system(command7)"
+    "# print current system time\n",
+    "myCmd = os.popen('date').read()\n",
+    "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Plot Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Run \"PlotResults.py\" and \"Configurations/PlotConf_TTbarAnalysis.py\" to plot the results."
    ]
   },
   {
@@ -503,17 +576,20 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Die Jul  9 21:01:23 CEST 2019\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "256"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "myCmd = os.popen('date').read()\n",
-    "print(myCmd)"
+    "# plot results\n",
+    "command7 = 'python PlotResults.py Configurations/PlotConf_TTbarAnalysis.py' \n",
+    "os.system(command7)"
    ]
   },
   {
@@ -524,20 +600,25 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Don Jul 11 14:32:47 CEST 2019\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "##\n",
-    "command8 = 'ls -lhrt Output/'\n",
-    "os.system(command8)"
+    "# print current system time\n",
+    "myCmd = os.popen('date').read()\n",
+    "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- List all the plots in \"Output\" folder"
    ]
   },
   {
@@ -548,15 +629,40 @@
    },
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# list all files in \"Output\"\n",
+    "command8 = 'ls -lhrt Output/'\n",
+    "os.system(command8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/student/python-8tev/atlas-outreach-data-tools-framework\n",
+      "/home/student/demos-framework-software-notebooks/python-8tev/atlas-outreach-data-tools-framework\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# print your current path\n",
     "myCmd = os.popen('pwd').read()\n",
     "print(myCmd)"
    ]
@@ -572,6 +678,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
