--- a/get-running-8-tev-code.ipynb
+++ b/get-running-8-tev-code.ipynb
@@ -24,12 +24,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Import OS module that provides a way of using operating system dependent functionality. "
+    "### 1.1 Import necessery modules that provide a way of using operating system dependent functionality. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -39,8 +39,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print current system time"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -49,13 +56,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Don Jul 11 15:25:35 CEST 2019\n",
+      "Sam Jul 13 00:35:58 CEST 2019\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# print current system time\n",
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
    ]
@@ -64,12 +70,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Create a new folder \"python-8tev\" in which you place your data and code"
+    "### 1.2 Create a new folder \"python-8tev\" in which you place your data and code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Create a directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -80,20 +93,26 @@
        "0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# create a directory\n",
     "command1 = 'mkdir python-8tev'\n",
     "os.system(command1)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- List the files in your directory"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -102,22 +121,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 8.0K\n",
-      "drwxr-xr-x 8 summerstudent users 4.0K Jul 11 15:20 atlas-outreach-data-tools-framework\n",
-      "drwxr-xr-x 2 summerstudent users 4.0K Jul 11 15:25 python-8tev\n",
+      "total 4.0K\n",
+      "drwxr-xr-x 2 summerstudent users 4.0K Jul 13 00:36 python-8tev\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# list the files in your directory\n",
     "myCmd = os.popen('ls -lhrt').read()\n",
     "print(myCmd)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print your current path"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -126,13 +150,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/student/demos-framework-software-notebooks/python-8tev/atlas-outreach-data-tools-framework/python-8tev/python-8tev\n",
+      "/home/student/demos-framework-software-notebooks/python-8tev\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# print your current path\n",
     "myCmd = os.popen('pwd').read()\n",
     "print(myCmd)"
    ]
@@ -141,106 +164,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Prepare the code "
+    "### 1.3 Prepare the code "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Change current directory to \"python-8tev\" "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "[Errno 2] No such file or directory: 'python-8tev/'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-54-6be7c216669f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m##\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# change current directory to \"python-8tev\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"python-8tev/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m: [Errno 2] No such file or directory: 'python-8tev/'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# change current directory to \"python-8tev\" \n",
     "os.chdir(\"python-8tev/\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/student/demos-framework-software-notebooks/python-8tev/atlas-outreach-data-tools-framework/python-8tev/python-8tev/python-8tev\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print your current path\n",
-    "myCmd = os.popen('pwd').read()\n",
-    "print(myCmd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Don Jul 11 15:27:59 CEST 2019\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print current system time\n",
-    "myCmd = os.popen('date').read()\n",
-    "print(myCmd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# clone the code of 8TeV from github\n",
-    "command2 = 'git clone https://github.com/atlas-outreach-data-tools/atlas-outreach-data-tools-framework.git'\n",
-    "os.system(command2)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Prepare the 8 TeV dataset"
+    "- Print your current path"
    ]
   },
   {
@@ -249,10 +198,26 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/student/demos-framework-software-notebooks/python-8tev/python-8tev\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# change current directory to \"Input\"\n",
-    "os.chdir(\"atlas-outreach-data-tools-framework/Input/\")"
+    "myCmd = os.popen('pwd').read()\n",
+    "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print current system time"
    ]
   },
   {
@@ -266,15 +231,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/student/demos-framework-software-notebooks/python-8tev/atlas-outreach-data-tools-framework/Input\n",
+      "Sam Jul 13 00:37:08 CEST 2019\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# print your current path\n",
-    "myCmd = os.popen('pwd').read()\n",
+    "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Clone the code of 8TeV from github"
    ]
   },
   {
@@ -285,18 +256,33 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Don Jul 11 14:28:34 CEST 2019\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# print current system time\n",
-    "myCmd = os.popen('date').read()\n",
-    "print(myCmd)"
+    "command2 = 'git clone https://github.com/atlas-outreach-data-tools/atlas-outreach-data-tools-framework.git'\n",
+    "os.system(command2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4 Prepare the 8 TeV dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Change current directory to \"Input\""
    ]
   },
   {
@@ -305,22 +291,16 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# download data\n",
-    "command3 = 'wget http://opendata.atlas.cern/release/samples/complete_set_of_ATLAS_open_data_samples_July_2016.zip'\n",
-    "os.system(command3)"
+    "os.chdir(\"atlas-outreach-data-tools-framework/Input/\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print your current path"
    ]
   },
   {
@@ -334,39 +314,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Don Jul 11 14:32:44 CEST 2019\n",
+      "/home/student/demos-framework-software-notebooks/python-8tev/python-8tev/atlas-outreach-data-tools-framework/Input\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# print current system time\n",
-    "myCmd = os.popen('date').read()\n",
+    "myCmd = os.popen('pwd').read()\n",
     "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print current system time"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "12800"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sam Jul 13 00:37:17 CEST 2019\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "# unzip the dataset you download\n",
-    "command4 = 'unzip complete_set_of_ATLAS_open_data_samples_July_2016.zip'\n",
-    "os.system(command4)"
+    "myCmd = os.popen('date').read()\n",
+    "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Download dataset\n",
+    "\n",
+    "**Note**: Download this dataset only once. If you have run it before, please go to  **2. Run Analysis** part directly."
    ]
   },
   {
@@ -377,19 +370,26 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The history saving thread hit an unexpected error (OperationalError('database or disk is full',)).History will not be written to the database.\n",
-      "Don Jul 11 14:32:46 CEST 2019\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "768"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# print current system time\n",
-    "myCmd = os.popen('date').read()\n",
-    "print(myCmd)"
+    "command3 = 'wget http://opendata.atlas.cern/release/samples/complete_set_of_ATLAS_open_data_samples_July_2016.zip'\n",
+    "os.system(command3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print current system time"
    ]
   },
   {
@@ -400,20 +400,25 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The history saving thread hit an unexpected error (OperationalError('database or disk is full',)).History will not be written to the database.\n",
+      "Sam Jul 13 01:28:07 CEST 2019\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "# remove the zip file\n",
-    "command5 = 'rm -rf complete_set_of_ATLAS_open_data_samples_July_2016.zip'\n",
-    "os.system(command5)"
+    "myCmd = os.popen('date').read()\n",
+    "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Unzip the dataset you download"
    ]
   },
   {
@@ -424,30 +429,54 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Don Jul 11 14:32:47 CEST 2019\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2304"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# print current system time\n",
-    "myCmd = os.popen('date').read()\n",
-    "print(myCmd)"
+    "command4 = 'unzip complete_set_of_ATLAS_open_data_samples_July_2016.zip'\n",
+    "os.system(command4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print current system time"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sam Jul 13 01:28:07 CEST 2019\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# change current path to parent directory\n",
-    "os.chdir(\"..\")"
+    "myCmd = os.popen('date').read()\n",
+    "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Remove the zip file"
    ]
   },
   {
@@ -458,18 +487,26 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/student/demos-framework-software-notebooks/python-8tev/atlas-outreach-data-tools-framework\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# print your current path\n",
-    "myCmd = os.popen('pwd').read()\n",
-    "print(myCmd)"
+    "command5 = 'rm -rf complete_set_of_ATLAS_open_data_samples_July_2016.zip'\n",
+    "os.system(command5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print current system time"
    ]
   },
   {
@@ -483,13 +520,86 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Don Jul 11 14:32:47 CEST 2019\n",
+      "Sam Jul 13 01:28:08 CEST 2019\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# print current system time\n",
+    "myCmd = os.popen('date').read()\n",
+    "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Change current path to parent directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "os.chdir(\"..\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print your current path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/student/demos-framework-software-notebooks/python-8tev/python-8tev/atlas-outreach-data-tools-framework\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "myCmd = os.popen('pwd').read()\n",
+    "print(myCmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print current system time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sam Jul 13 01:28:08 CEST 2019\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
    ]
@@ -510,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -521,20 +631,26 @@
        "256"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# run analysis\n",
     "command6 = 'python RunScript.py -a TTbarAnalysis'\n",
     "os.system(command6)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print current system time"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -543,13 +659,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Don Jul 11 14:32:47 CEST 2019\n",
+      "Sam Jul 13 01:28:10 CEST 2019\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# print current system time\n",
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
    ]
@@ -570,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -581,7 +696,7 @@
        "256"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,8 +708,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print current system time"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -603,13 +725,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Don Jul 11 14:32:47 CEST 2019\n",
+      "Sam Jul 13 01:28:11 CEST 2019\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# print current system time\n",
     "myCmd = os.popen('date').read()\n",
     "print(myCmd)"
    ]
@@ -623,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -634,20 +755,26 @@
        "0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# list all files in \"Output\"\n",
     "command8 = 'ls -lhrt Output/'\n",
     "os.system(command8)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Print your current path"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -656,16 +783,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/student/demos-framework-software-notebooks/python-8tev/atlas-outreach-data-tools-framework\n",
+      "/home/student/demos-framework-software-notebooks/python-8tev/python-8tev/atlas-outreach-data-tools-framework\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# print your current path\n",
     "myCmd = os.popen('pwd').read()\n",
     "print(myCmd)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
