--- a/get-running-8-tev-code-cpp.ipynb
+++ b/get-running-8-tev-code-cpp.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sam Jul 13 01:38:10 CEST 2019\r\n"
+      "Mit Jul 17 17:37:31 CEST 2019\r\n"
      ]
     }
    ],
@@ -81,15 +81,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "mkdir: cannot create directory ‘cpp-8tev’: File exists\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "system(\"mkdir cpp-8tev\"); "
    ]
@@ -112,13 +104,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 80K\r\n",
+      "total 36K\r\n",
       "-rw-r--r-- 1 summerstudent users  138 Jul 11 16:11 README.md\r\n",
-      "-rw-r--r-- 1 summerstudent users  33K Jul 12 17:21 ATLAS_OpenData_08-cpp_cut_and_count_analysis_example.ipynb\r\n",
-      "drwxr-xr-x 3 summerstudent users 4.0K Jul 13 00:25 cpp-8tev\r\n",
-      "drwxr-xr-x 3 summerstudent users 4.0K Jul 13 00:36 python-8tev\r\n",
       "-rw-r--r-- 1 summerstudent users  15K Jul 13 01:28 get-running-8-tev-code.ipynb\r\n",
-      "-rw-r--r-- 1 summerstudent users  14K Jul 13 01:31 get-running-8-tev-code-cpp.ipynb\r\n"
+      "-rw-r--r-- 1 summerstudent users  10K Jul 17 17:31 get-running-8-tev-code-cpp.ipynb\r\n",
+      "drwxr-xr-x 2 summerstudent users 4.0K Jul 17 17:37 cpp-8tev\r\n"
      ]
     }
    ],
@@ -170,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -223,7 +213,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sam Jul 13 01:34:44 CEST 2019\r\n"
+      "Mit Jul 17 17:37:36 CEST 2019\r\n"
      ]
     }
    ],
@@ -249,7 +239,60 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "fatal: destination path 'atlas-outreach-data-tools-framework' already exists and is not an empty directory.\r\n"
+      "Cloning into 'atlas-outreach-data-tools-framework'...\r\n",
+      "remote: Enumerating objects: 49, done.\u001b[K\r\n",
+      "Unpacking objects:   2% (1/49)   \r",
+      "Unpacking objects:   4% (2/49)   \r",
+      "Unpacking objects:   6% (3/49)   \r",
+      "Unpacking objects:   8% (4/49)   \r",
+      "Unpacking objects:  10% (5/49)   \r",
+      "Unpacking objects:  12% (6/49)   \r",
+      "Unpacking objects:  14% (7/49)   \r",
+      "Unpacking objects:  16% (8/49)   \r",
+      "Unpacking objects:  18% (9/49)   \r",
+      "Unpacking objects:  20% (10/49)   \r",
+      "Unpacking objects:  22% (11/49)   \r",
+      "Unpacking objects:  24% (12/49)   \r",
+      "Unpacking objects:  26% (13/49)   \r",
+      "Unpacking objects:  28% (14/49)   \r",
+      "Unpacking objects:  30% (15/49)   \r",
+      "Unpacking objects:  32% (16/49)   \r",
+      "Unpacking objects:  34% (17/49)   \r",
+      "Unpacking objects:  36% (18/49)   \r",
+      "Unpacking objects:  38% (19/49)   \r",
+      "Unpacking objects:  40% (20/49)   \r",
+      "Unpacking objects:  42% (21/49)   \r",
+      "Unpacking objects:  44% (22/49)   \r",
+      "Unpacking objects:  46% (23/49)   \r",
+      "Unpacking objects:  48% (24/49)   \r",
+      "Unpacking objects:  51% (25/49)   \r",
+      "Unpacking objects:  53% (26/49)   \r",
+      "Unpacking objects:  55% (27/49)   \r",
+      "remote: Total 49 (delta 0), reused 0 (delta 0), pack-reused 49\u001b[K\r\n",
+      "Unpacking objects:  57% (28/49)   \r",
+      "Unpacking objects:  59% (29/49)   \r",
+      "Unpacking objects:  61% (30/49)   \r",
+      "Unpacking objects:  63% (31/49)   \r",
+      "Unpacking objects:  65% (32/49)   \r",
+      "Unpacking objects:  67% (33/49)   \r",
+      "Unpacking objects:  69% (34/49)   \r",
+      "Unpacking objects:  71% (35/49)   \r",
+      "Unpacking objects:  73% (36/49)   \r",
+      "Unpacking objects:  75% (37/49)   \r",
+      "Unpacking objects:  77% (38/49)   \r",
+      "Unpacking objects:  79% (39/49)   \r",
+      "Unpacking objects:  81% (40/49)   \r",
+      "Unpacking objects:  83% (41/49)   \r",
+      "Unpacking objects:  85% (42/49)   \r",
+      "Unpacking objects:  87% (43/49)   \r",
+      "Unpacking objects:  89% (44/49)   \r",
+      "Unpacking objects:  91% (45/49)   \r",
+      "Unpacking objects:  93% (46/49)   \r",
+      "Unpacking objects:  95% (47/49)   \r",
+      "Unpacking objects:  97% (48/49)   \r",
+      "Unpacking objects: 100% (49/49)   \r",
+      "Unpacking objects: 100% (49/49), done.\r\n",
+      "Checking connectivity... done.\r\n"
      ]
     }
    ],
@@ -326,7 +369,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sam Jul 13 01:34:56 CEST 2019\r\n"
+      "Mit Jul 17 17:37:38 CEST 2019\r\n"
      ]
     }
    ],
